# ByteSlice2

./: .gitignore  CMakeLists.txt  README.md  conjunction.sh  disjunction.sh
example/: CMakeLists.txt  example1.cpp
experiments/: CMakeLists.txt  bytewise.cpp  bytewise_conjuction.cpp  bytewise_conjunction.cpp  bytewise_scan.cpp  conjunction.cpp  conjunction_options.cpp  disjunction_options.cpp  exp-utility.h  lookup.cpp  param_test.cpp  simple-normal.cpp  simple-old.cpp  simple.cpp  spa.cpp  testPCM.cpp
gtest-1.7.0/make/: sample1_unittest
include/: avx-utility.h  avx2scan_column_block.h  bitslice_column_block.h  bitvector.h  bitvector_block.h  bitvector_iterator.h  byte_mask_block.h  byte_mask_vector.h  byteslice_column_block.h  bytewise_scan.h  column.h  column_block.h  common.h  disjunction.h  dualbyteslice_column_block.h  hbp_column_block.h  hybridslice_column_block.h  naive_avx_column_block.h  naive_column_block.h  pipeline_scan.h  sequential_binary_file.h  superscalar2_byteslice_column_block.h  superscalar4_byteslice_column_block.h  table.h  types.h  vbp_column_block.h  zipf.h
src/: .avx32_joinable_block.cpp.swp  CMakeLists.txt  avx2scan_column_block.cpp  bitslice_column_block.cpp  bitvector.cpp  bitvector_block.cpp  bitvector_iterator.cpp  byte_mask_block.cpp  byte_mask_vector.cpp  byteslice_column_block.cpp  bytewise_scan.cpp  column.cpp  disjunction.cpp  dualbyteslice_column_block.cpp  hbp_column_block.cpp  hybridslice_column_block.cpp  naive_avx_column_block.cpp  naive_column_block.cpp  pipeline_scan.cpp  sequential_binary_file.cpp  superscalar2_byteslice_column_block.cpp  superscalar4_byteslice_column_block.cpp  types.cpp  vbp_column_block.cpp
tests/: CMakeLists.txt  avx-utility_test.cpp  avx2scan_column_block_test.cpp  bitslice_column_block_test.cpp  bitvector_block_test.cpp  bitvector_iterator_test.cpp  bitvector_test.cpp  byte_mask_block_test.cpp  byteslice_column_block_test.cpp  column_test.cpp  dualbyteslice_column_block_test.cpp  hbp_column_block_test.cpp  hybridslice_column_block_test.cpp  naive_avx_column_block_test.cpp  naive_column_block_test.cpp  pipeline_scan_test.cpp  superscalar2byteslice_column_block_test.cpp  superscalar4byteslice_column_block_test.cpp  vbp_column_block_test.cpp  zipf_test.cpp
util/: CMakeLists.txt  system_perf_monitor.cpp  system_perf_monitor.h
util/stream/: Makefile  stream  stream.c
